infra/host-self/manifests/base/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: puchi
  labels:
    name: puchi
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform
  labels:
    name: platform
    type: infrastructure
---
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    name: auth
    type: platform
